-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
For small read sizes (1k and below), creating a cl_env can be over 90% of the time spent doing ll_do_fast_read.
ll_do_fast_read doesn't really need a cl_env, it only uses it for some debug printing. Not prepping a cl_env for ll_do_fast_reads improves read rates (for already cached data) for 1 byte reads by ~20x, and 1k reads by ~10x. 4k reads are improved by ~5x.
Patch coming shortly.