lustre/llite/file.c
@@ -1385,8 +1385,7 @@ out:
  * \retval - number of bytes have been read, or error code if error occurred.
  */
 static ssize_t
-ll_do_fast_read(const struct lu_env *env, struct kiocb *iocb,
-		struct iov_iter *iter)
+ll_do_fast_read(struct kiocb *iocb, struct iov_iter *iter)
 {
 	ssize_t result;
 
@@ -1398,9 +1397,7 @@ ll_do_fast_read(const struct lu_env *env, struct kiocb *iocb,
 	if (iocb->ki_filp->f_flags & O_DIRECT)
 		return 0;
 
-	ll_cl_add(iocb->ki_filp, env, NULL, LCC_RW);
 	result = generic_file_read_iter(iocb, iter);
-	ll_cl_remove(iocb->ki_filp, env);
 
 	/* If the first page is not in cache, generic_file_aio_read() will be
 	 * returned with -ENODATA.
@@ -1426,13 +1423,13 @@ static ssize_t ll_file_read_iter(struct kiocb *iocb, struct iov_iter *to)
 	ssize_t rc2;
 	__u16 refcheck;
 
+	result = ll_do_fast_read(iocb, to);
+	if (result < 0 || iov_iter_count(to) == 0)
+		GOTO(out, result);
+
 	env = cl_env_get(&refcheck);
 	if (IS_ERR(env))
 		return PTR_ERR(env);
-
-	result = ll_do_fast_read(env, iocb, to);
-	if (result < 0 || iov_iter_count(to) == 0)
-		GOTO(out, result);
 
 	args = ll_env_args(env, IO_NORMAL);
 	args->u.normal.via_iter = to;
@@ -1445,8 +1442,8 @@ static ssize_t ll_file_read_iter(struct kiocb *iocb, struct iov_iter *to)
 	else if (result == 0)
 		result = rc2;
 
-out:
 	cl_env_put(env, &refcheck);
+out:
 	return result;
 }
 
@@ -1532,30 +1529,22 @@ static ssize_t ll_file_aio_read(struct kiocb *iocb, const struct iovec *iov,
 static ssize_t ll_file_read(struct file *file, char __user *buf, size_t count,
 			    loff_t *ppos)
 {
-	struct lu_env *env;
 	struct iovec   iov = { .iov_base = buf, .iov_len = count };
-	struct kiocb  *kiocb;
+	struct kiocb   kiocb;
 	ssize_t        result;
-	__u16          refcheck;
 	ENTRY;
 
-	env = cl_env_get(&refcheck);
-	if (IS_ERR(env))
-		RETURN(PTR_ERR(env));
-
-	kiocb = &ll_env_info(env)->lti_kiocb;
-        init_sync_kiocb(kiocb, file);
-        kiocb->ki_pos = *ppos;
+	init_sync_kiocb(&kiocb, file);
+	kiocb.ki_pos = *ppos;
 #ifdef HAVE_KIOCB_KI_LEFT
-	kiocb->ki_left = count;
+	kiocb.ki_left = count;
 #elif defined(HAVE_KI_NBYTES)
-	kiocb->ki_nbytes = count;
+	kiocb.i_nbytes = count;
 #endif
 
-	result = ll_file_aio_read(kiocb, &iov, 1, kiocb->ki_pos);
-	*ppos = kiocb->ki_pos;
+	result = ll_file_aio_read(&kiocb, &iov, 1, kiocb.ki_pos);
+	*ppos = kiocb.ki_pos;
 
-	cl_env_put(env, &refcheck);
 	RETURN(result);
 }
 
